k8s/30-app/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: mp2-ghazi
  labels:
    app: taskapp
    tier: api

spec:
  replicas: 2

  selector:
    matchLabels:
      app: taskapp
      tier: api

  template:
    metadata:
      labels:
        app: taskapp
        tier: api

    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 1001

      volumes:
        - name: tmp
          emptyDir: {}

      serviceAccountName: api-sa

      containers:
        - name: api
          image: ghaazii/taskapp-api:1.0.0
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 8000
              name: http

          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true

          volumeMounts:
            - name: tmp
              mountPath: /tmp

          readinessProbe:
            httpGet:
              path: /ready
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 5

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 256Mi
