k8s/30-app/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-svc
  namespace: mp2-ghazi
spec:
  selector:
    app: taskapp
    tier: api
  ports:
    - name: http
      port: 8000
      targetPort: 8000
