k8s/30-app/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: mp2-ghazi
spec:
  selector:
    app: taskapp
    tier: frontend
  ports:
    - name: http
      port: 80
      targetPort: 8080
